@@ -515,7 +515,7 @@ Displays first N lines of supplied text text file. If interval is not supplied, 
 Horizontal line, height is the height in pixels
 
 .TP 
-\fBi2c\fR \fB(dev), type, n\fR 
+\fBi2c\fR \fB(dev) type n\fR 
 I2C sensor from sysfs (Linux 2.6). dev may be omitted if you have only one I2C device. type is either in (or vol) meaning voltage, fan meaning fan or temp/tempf (first in C, second in F) meaning temperature. n is number of the sensor. See /sys/bus/i2c/devices/ on your local computer.
 
 .TP 
